Fully enabled chat app

--- a/views/chat.ejs
+++ b/views/chat.ejs
@@ -1,1 +1,4 @@
-chat
+<div id='react-root'></div>
+<script type="text/javascript" src="/js/models.js"></script>
+<script type="text/javascript" src="/js/components.js"></script>
+<script type="text/javascript" src="/js/chat.js"></script>
