--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -1,9 +1,20 @@
+
 <!DOCTYPE html>
 <html>
 <head>
     <title><%= title %></title>
     <link rel="stylesheet" href="/css/cosmo.min.css">
     <link rel="stylesheet" href="/css/style.css">
+    <script type="text/javascript" src="/jquery/dist/jquery.js"></script>
+    <script type="text/javascript" src="/underscore/underscore.js"></script>
+    <script type="text/javascript" src="/backbone/backbone.js"></script>
+    <script type="text/javascript" src="/react/react.js"></script>
+    <script type="text/javascript" src="/conduitjs/lib/conduit.js"></script>
+    <script type="text/javascript" src="/lodash/dist/lodash.js"></script>
+    <script type="text/javascript" src="/postal.js/lib/postal.js"></script>
+    <script type="text/javascript" src="/momentjs/moment.js"></script>
+    <script type="text/javascript" src="/js/md5.js"></script>
+    <script type="text/javascript" src="/socket.io/socket.io.js"></script>
 </head>
 <body>
 <div class="container">
@@ -23,10 +34,5 @@
 	<%- body %>
 	</div>
 </div>
-  <script type="text/javascript" src="/js/socket.io.js"></script>
-  <script>
-    var socket=io.connect('http://habt.ice-ix.net:3000/packtchat');
-    socket.on('message', function(d){console.log(d);});
-  </script>
 </body>
 </html>
